--- a/index.html
+++ b/index.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Assignment-1</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Xanh+Mono&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="one">
-        
+        <div class="heading-content">
+            <div class="top-head">
+                <h1><span id="hello">HELLO, I'M</span><br><span id="rob">ROB DAVIDSON</span></h1>
+            </div>
+            <p>A full stack allaround designer that placerat in massa consectetur</p>
+            <a class="top-button" href="http://www.facebook.com/nafim96" target="_blank">Hire Me</a>
+
+        </div>
+        <div class="heading-img">
+            <img src="images/first-heading.png" alt="first Image">
+        </div>
+    </section>
+
+    <section class="two">
+        <div class="heading-img">
+            <img src="images/second-heading1.png" alt="first Image">
+        </div>
+        <div class="heading-content">
+            <h1 id="hello">ABOUT</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to make a type
+                specimen book.</p>
+            <a class="top-button" href="http://www.facebook.com/nafim96" target="_blank">Download CV</a>
+        </div>
+    </section>
+
+    <section class="three">
+        <div class="three-heading">
+            <h1><span id="lastet">LASTET</span> WORKING PROJECT</h1>
+        </div>
+        <div class="three-img">
+            <div class="last-img">
+                <img src="images/image 4.png" alt="">
+                <h1>Power-x-gym (gym website)</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+            </div>
+            <div class="last-img">
+                <img src="images/image 5.png" alt="">
+                <h1>Creative Agency</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="last-img">
+                <img src="images/image 8.png" alt="">
+                <h1>Hard Rock Music</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+            </div>
+        </div>
+    </section>
+    <section class="four">
+        <div class="working-inquiry">
+            <div class="work-title">
+                <h1>WORK INQUIRY</h1>
+            </div>
+            <div class="chat">
+                <a id="down-button" href="http://www.facebook.com/nafim96" target="_blank">Let’s Chat</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="five">
+        <div class="five-heading">
+            <h4>STAY CONNECTED</h4>
+            <h2>hello@desing.com</h2>
+        </div>
+        <div class="icon">
+            <img src="icons/image 6.png" alt="">
+            <img src="icons/Group 33059.png" alt="">
+            <img src="icons/image 7.png" alt="">
+        </div>
     </section>
 </body>
+
 </html>
