--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="heading-img">
             <img src="images/second-heading1.png" alt="first Image">
         </div>
-        <div class="heading-content">
+        <div class="second-heading-content">
             <h1 id="hello">ABOUT</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and
                 typesetting industry. Lorem Ipsum has been the industry's
